# chipi-chapa

./: .gitignore  chipi-chapa.cabal
.github/workflows/: build.yml  cache.yml
app/: Main.hs
src/: ChipiChapa.hs
src/ChipiChapa/: CPU.hs  GUI.hs  Parser.hs  Types.hs
