cabal-version:      3.0
name:               chipi-chapa
version:            0.1.2
-- synopsis:
-- description:
homepage:           https://github.com/ProggerX/chipi-chapa
license:            GPL-3.0-only
license-file:       LICENSE
author:             ProggerX
maintainer:         x@proggers.ru
-- copyright:
build-type:         Simple
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  ChipiChapa
    other-modules:
        ChipiChapa.Types,
        ChipiChapa.GUI,
        ChipiChapa.CPU,
        ChipiChapa.Parser
    -- other-extensions:
    build-depends:
        base >= 4.19.2.0,
        vector,
        binary,
        bytestring,
        text,
        mtl,
        lens,
        h-raylib,
        parsec,
        random
    hs-source-dirs:   src
    default-language: GHC2021

executable chipi-chapa
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base >= 4.19.2.0,
        chipi-chapa

    hs-source-dirs:   app
    default-language: GHC2021
